--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@angular/forms": "^9.1.4",
     "@angular/platform-browser": "^9.1.4",
     "@angular/router": "^9.1.4",
+    "ngx-foundation": "^1.0.8",
     "rxjs": "^6.5.5",
     "tslib": "^1.11.1",
+    "what-input": "^5.2.7",
     "zone.js": "^0.10.3"
   },
   "scripts": {
